# tasmota-http-api

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md  BUILD.md  EXAMPLES.md
src/tasmota_http/: __init__.py  client.py  exceptions.py  types.py
tests/: test_client.py
